# ferrum

./: Cargo.toml  README.md
src/: app.rs  event.rs  main.rs  tui.rs
src/http/: client.rs
src/models/: collection.rs  environment.rs  history.rs  mod.rs  request.rs  response.rs
src/storage/: collections.rs  environments.rs  history.rs  mod.rs
src/ui/: highlight.rs  layout.rs  mod.rs  request_panel.rs  response_panel.rs  sidebar.rs
src/ui/modals/: confirm_delete.rs  environment.rs  help.rs  mod.rs  new_collection.rs  new_request.rs
src/ui/tabs/: auth_tab.rs  body_tab.rs  headers_tab.rs  mod.rs  params_tab.rs  response_body_tab.rs  response_headers_tab.rs  response_raw_tab.rs
src/utils/: env_interpolation.rs  json_format.rs  mod.rs
