[package]
name = "ferrum"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ferrum"
path = "src/main.rs"

[dependencies]
ratatui          = "0.29"
crossterm        = "0.28"
tui-textarea     = { version = "0.7", features = ["crossterm"] }
tokio            = { version = "1", features = ["full"] }
reqwest          = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde            = { version = "1", features = ["derive"] }
serde_json       = "1"
syntect          = "5"
anyhow           = "1"
dirs             = "5"
uuid             = { version = "1", features = ["v4"] }
chrono           = { version = "0.4", features = ["serde"] }
